--- a/css/projects/_project.scss
+++ b/css/projects/_project.scss
@@ -8,6 +8,9 @@
 
 	figure {
 		background-color: rgb(232,57,68);
+		img {
+			border: 1px solid rgb(255,255,255);
+		}
 	}
 	.project-index-meta {
 		opacity: 0.6;
