--- a/css/site/_misc.scss
+++ b/css/site/_misc.scss
@@ -35,3 +35,7 @@
 [data-embed]:hover:before {
 	border-color: rgba(255,255,255,0.9);
 }
+[data-embed].video-in-place:after,
+[data-embed].video-in-place:before {
+	display: none;
+}
